--- a/solver_config.json
+++ b/solver_config.json
@@ -4,6 +4,7 @@
 		"type":"mono_pole",//point, mono_pole, plan_wave//
 		"strength": 1,
 		"location": [4.5,4.5,4.6,4.6],
+		"location": [],
 		"evaluation point": [
 			[1,2,3],[2,4,2]
 		],
