--- a/solver_config.json
+++ b/solver_config.json
@@ -5,6 +5,7 @@
 		"strength": 1,
 		"location": [4.5,4.5,4.6,4.6],
 		"local": [1],
+		"add"
 		"work":[1],
 		"evaluation point": [
 			[1,2,3],[2,4,2]
